[gd_scene load_steps=15 format=3 uid="uid://doax16vbups3k"]

[ext_resource type="Script" uid="uid://bedcaaqrsuucb" path="res://assets/scripts/select_puzzle.gd" id="1_lx4o5"]
[ext_resource type="Texture2D" uid="uid://djl2guwkgu775" path="res://assets/puzzles/AdobeStock_104619688.jpeg" id="2_xyg5e"]
[ext_resource type="Texture2D" uid="uid://cjejvll72xhdf" path="res://assets/puzzles/new_background.jpg" id="3_3k1lu"]
[ext_resource type="FontFile" uid="uid://kspgvi10aw1x" path="res://assets/fonts/ArchitectsDaughter.ttf" id="4_3hl4u"]
[ext_resource type="Theme" uid="uid://0xk2aimn5x6r" path="res://assets/themes/main_menu_buttons.tres" id="4_05g7m"]
[ext_resource type="Theme" uid="uid://bkvtkuva05g1w" path="res://assets/themes/display_puzzles_buttons.tres" id="4_ctan7"]
[ext_resource type="Theme" uid="uid://cfxebjeqy3ke7" path="res://assets/themes/bold_text.tres" id="4_nyl1e"]
[ext_resource type="Texture2D" uid="uid://chxeyv42e71ho" path="res://assets/images/left_arrow.png" id="5_2ca8n"]
[ext_resource type="AudioStream" uid="uid://dbjdeh7acychu" path="res://assets/sounds/finger-snap-179180.mp3" id="5_7prs1"]
[ext_resource type="Texture2D" uid="uid://fup4ssxc0htk" path="res://assets/images/Left_Arrow_Light copy.png" id="7_http0"]
[ext_resource type="FontFile" uid="uid://eiuxkjsrskgd" path="res://assets/fonts/KiriFont.ttf" id="9_3rueg"]
[ext_resource type="Texture2D" uid="uid://uibcjjsvjae7" path="res://assets/images/Right_Arrow_Light.png" id="9_i8mdc"]

[sub_resource type="FontVariation" id="FontVariation_05g7m"]
base_font = ExtResource("4_3hl4u")
variation_embolden = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tswy4"]
texture = ExtResource("5_2ca8n")
modulate_color = Color(0.823529, 0.976471, 0.427451, 1)

[node name="selectpuzzle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lx4o5")

[node name="background texture" type="Sprite2D" parent="."]
position = Vector2(1012, 675)
scale = Vector2(0.388011, 0.380041)
texture = ExtResource("2_xyg5e")

[node name="new background" type="TextureRect" parent="background texture"]
offset_left = -2847.86
offset_top = -1947.16
offset_right = 2843.14
offset_bottom = 1946.84
scale = Vector2(0.998321, 1)
texture = ExtResource("3_3k1lu")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 666.5
offset_top = 134.5
offset_right = 1253.5
offset_bottom = 945.5
pivot_offset = Vector2(307, 718)
theme_override_constants/separation = 50
alignment = 1

[node name="Thumbnail" type="TextureRect" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1

[node name="size_label" type="Label" parent="Panel/VBoxContainer/Thumbnail"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -87.0
offset_right = 68.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_nyl1e")
theme_override_fonts/font = SubResource("FontVariation_05g7m")
theme_override_font_sizes/font_size = 50

[node name="Start_Puzzle" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
theme = ExtResource("4_05g7m")
theme_override_font_sizes/font_size = 50
text = "Start Puzzle!"

[node name="Go_Back" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
theme = ExtResource("4_05g7m")
theme_override_font_sizes/font_size = 50
text = "  Select Other Puzzle  "

[node name="GoBackToMenu" type="Button" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 41.0
offset_top = -125.0
offset_right = 284.0
offset_bottom = -35.0
grow_vertical = 0
theme = ExtResource("4_05g7m")
text = " Go Back To Menu "

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 795.0
offset_top = 31.0
offset_right = 1181.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(1, 0.741176, 0.34902, 1)
theme_override_colors/font_shadow_color = Color(0.478431, 0.215686, 0.0588235, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3hl4u")
theme_override_font_sizes/font_size = 50
text = "Select Puzzle"

[node name="PageIndicator" type="Label" parent="."]
layout_mode = 0
offset_left = 866.0
offset_top = 935.0
offset_right = 1070.0
offset_bottom = 998.0
theme_override_colors/font_color = Color(1, 0.741176, 0.34902, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.294118, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_3hl4u")
theme_override_font_sizes/font_size = 36
text = "1 out of 2"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7prs1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 138.0
offset_right = 1840.0
offset_bottom = 910.0
alignment = 1

[node name="left button" type="Button" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_tswy4")
icon = ExtResource("7_http0")
flat = true
icon_alignment = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="grid0" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_ctan7")
text = "Button 1"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/grid0"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/GridContainer/grid0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_3rueg")
theme_override_font_sizes/normal_font_size = 40
text = "10
"

[node name="grid1" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_ctan7")
text = "Button 2"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/grid1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/GridContainer/grid1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_3rueg")
theme_override_font_sizes/normal_font_size = 40
text = "10 0
"

[node name="grid2" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_ctan7")
text = "Button 3"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/grid2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/GridContainer/grid2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_3rueg")
theme_override_font_sizes/normal_font_size = 40
text = "10 0 0
"

[node name="grid3" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_ctan7")
text = "Button 4"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/grid3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/GridContainer/grid3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_3rueg")
theme_override_font_sizes/normal_font_size = 40
text = "10
"

[node name="grid4" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_ctan7")
text = "Button 5"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/grid4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/GridContainer/grid4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_3rueg")
theme_override_font_sizes/normal_font_size = 40
text = "10 0
"

[node name="grid5" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_ctan7")
text = "Button 6"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/grid5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/GridContainer/grid5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_3rueg")
theme_override_font_sizes/normal_font_size = 40
text = "10 0 0
"

[node name="grid6" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_ctan7")
text = "Button 7"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/grid6"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/GridContainer/grid6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_3rueg")
theme_override_font_sizes/normal_font_size = 40
text = "10
"

[node name="grid7" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_ctan7")
text = "Button 8"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/grid7"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/GridContainer/grid7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_3rueg")
theme_override_font_sizes/normal_font_size = 40
text = "10 0
"

[node name="grid8" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_ctan7")
text = "Button 9"
icon_alignment = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/grid8"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/GridContainer/grid8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_3rueg")
theme_override_font_sizes/normal_font_size = 40
text = "10 0 0
"

[node name="right button" type="Button" parent="HBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("9_i8mdc")
flat = true

[connection signal="pressed" from="Panel/VBoxContainer/Start_Puzzle" to="." method="_on_start_puzzle_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Go_Back" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="GoBackToMenu" to="." method="_on_go_back_to_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/left button" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="HBoxContainer/right button" to="." method="_on_right_button_pressed"]
